security: Remove hardcoded credentials and implement secure environment variable management
BREAKING CHANGES:
- Remove all hardcoded passwords from code and documentation
- Update init_auth.py to require DEFAULT_ADMIN_PASSWORD from .env
- Add comprehensive SECURITY.md with best practices and checklist
- Enhance .gitignore to prevent accidental secret commits
- Update .env.example with secure placeholders

SECURITY FIXES:
- No more hardcoded demo passwords (admin123, pastor123, member123)
- init_auth.py now reads credentials from environment variables
- Added security warnings to prevent credential leaks
- Comprehensive secret scanning recommendations

ACTION REQUIRED:
1. Copy .env.example to backend/.env
2. Set DEFAULT_ADMIN_PASSWORD=your_secure_password in backend/.env
3. Run: cd backend && python init_auth.py
4. Review SECURITY.md for complete security checklist

See SECURITY.md for detailed setup instructions and security best practices.

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,58 @@
-# Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/church_contacts
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_DB=church_contacts
+# ===========================================
+# EXAMPLE ENVIRONMENT VARIABLES
+# ===========================================
+# SECURITY WARNING: This is a template file.
+# Copy to .env and fill with YOUR actual values.
+# NEVER commit .env files to git!
+# ===========================================
 
-# Redis Configuration
+# Database Configuration
+DATABASE_URL=sqlite:///./church_contacts.db
+
+# Redis Configuration (Optional - for Celery)
 REDIS_URL=redis://localhost:6379/0
 
-# Twilio Configuration (Get from: https://console.twilio.com/)
-TWILIO_ACCOUNT_SID=your_account_sid
-TWILIO_AUTH_TOKEN=your_auth_token
+# Twilio Configuration (REQUIRED for SMS)
+# Get these from: https://console.twilio.com/
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your_auth_token_32_chars_here
 TWILIO_PHONE_NUMBER=+1234567890
 TWILIO_WEBHOOK_URL=https://your-domain.com/api/webhooks/twilio
 
-# OpenAI Configuration (Get from: https://platform.openai.com/)
-OPENAI_API_KEY=sk-your-api-key
+# OpenAI Configuration (REQUIRED for AI features)
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 OPENAI_MODEL=gpt-4-turbo-preview
 
+# JWT Secret Key (CRITICAL - Generate a secure random key)
+# Generate with: openssl rand -hex 32
+# DO NOT use this example value!
+SECRET_KEY=REPLACE_WITH_OUTPUT_FROM_openssl_rand_hex_32
+
+# Google Apps Script
+# Deploy your Google Apps Script and paste the URL here
+GOOGLE_SCRIPT_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
+
 # Application Configuration
-SECRET_KEY=your-secret-key-change-this
-DEBUG=True
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+DEBUG=False
+ENV=production
+ALLOWED_ORIGINS=http://localhost:3005,http://localhost:3000,http://localhost:3001
 
 # Backend URL
 BACKEND_URL=http://localhost:8000
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3005
+
+# Email Configuration (for password reset)
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_specific_password
+FROM_EMAIL=noreply@yourchurch.org
+
+# Default Admin User (CHANGE THESE IMMEDIATELY!)
+# Only used during initial setup with init_auth.py
+DEFAULT_ADMIN_EMAIL=admin@yourchurch.org
+DEFAULT_ADMIN_NAME=Admin User
+DEFAULT_ADMIN_PASSWORD=CHANGE_THIS_SECURE_PASSWORD_NOW
